in ProgressDialog use static valueOf instead of inefficient constructor
Change-Id: I933152eab919b65c585f163c34e595cc3eb1d04e
Signed-off-by: Tomasz Zarna <tomasz.zarna@tasktop.com>