@@ -258,7 +258,7 @@ public abstract class ProgressDialog extends TitleAreaDialog {
 		Button button = new Button(parent, SWT.PUSH);
 		button.setText(label);
 		button.setFont(JFaceResources.getDialogFont());
-		button.setData(new Integer(id));
+		button.setData(Integer.valueOf(id));
 		button.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent event) {
@@ -271,7 +271,7 @@ public abstract class ProgressDialog extends TitleAreaDialog {
 				shell.setDefaultButton(button);
 			}
 		}
-		buttons.put(new Integer(id), button);
+		buttons.put(Integer.valueOf(id), button);
 		setButtonLayoutData(button);
 		return button;
 	}
